# asgi-webdav

./: .coveragerc  .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .travis.yml  404.html  BuildDocker.sh  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.debian  LICENSE  MANIFEST.in  README.md  TODO  asgi-webdav.spec  br_wheel.sh  build_docker_and_test.sh  build_pyinstaller.sh  compatibility.html  config.html  dev.html  entrypoint.sh  fabfile.py  index.html  misc.html  mkdocs.yml  publish_to_pypi.sh  pyproject.toml  quick-start.zh.html  search_index.json  setup.cfg  setup.py  sitemap.xml  standalone.py  test.py  test_client.py  test_dav_lock.py  test_dav_path.py  (+2 more)
.github/: FUNDING.yml  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  proposal-template.md  proposal.md
.github/workflows/: black.yml  check-lint.yml  check-mypy.yaml  check-pre-commit.yml  check-pytest.yml  codeql.yml  docker.yaml  dockerhub.yaml  lint.yml  main.yaml.bak  mkdocs.yml  release-docker-image.yaml  release-dockerhub-ghcr.yml  release-dockerhub-test-cross-platform.yml  release-dockerhub-test.yml  release-dockerhub.yml  release-docs.yml  release-github.yml  release-pypi.yaml  test.yml
acknowledgements/: index.html
asgi_webdav/: __init__.py  __main__.py  admin.py  asgi.py  auth.py  cache.py  cli.py  config.py  constants.py  core.py  dev.py  distributor.py  docker.py  exception.py  exceptions.py  helpers.py  lock.py  log.py  logging.py  property.py  provider.py  request.py  response.py  server.py  template_loader.py  tiny_webdav.py  web_dav.py  web_page.py  webdav.py  wsgi.py
asgi_webdav/dev/: dev.py  litmus.py
asgi_webdav/middleware/: cors.py  debug.py  http_basic_and_digest_auth.py
asgi_webdav/middlewares/: debug.py  http_basic_and_digest_auth.py
asgi_webdav/page/: base.py  inside.py
asgi_webdav/provider/: base.py  common.py  dev_provider.py  file_system.py  memory.py  webhdfs.py
asgi_webdav/static/: styles.css
asgi_webdav/templates/: dir_browser.html
authentication/: index.html
changelog/: index.html
cli/: index.html
compatibility/: index.html
config/: index.html
config-file/: index.html
contributing/: index.html
cors/: index.html
docker/: asgi-webdav.py  cargo.config.toml  entrypoint.sh
docs/: .nav.yml  acknowledgements.md  changelog.en.md  compatibility.en.md  compatibility.md  config.md  contributing.en.md  dev.md  index.en.md  index.md  index.zh.md  install.en.md  known-issues.en.md  known-issues.md  litmus.md  misc.md  quick-start-in-docker.en.md  quick-start-in-docker.zh.md  quick-start.zh.md  trouble-shooting.en.md  usage.md
docs/example/: example-multi-account.en.md  example-protect-your-password-in-the-config.en.md
docs/guide/: authentication.en.md  cors.en.md  cors.zh.md  multi-account.en.md  protect-your-password-in-the-config.en.md
docs/howto/: howto-allow-anonymous-user.en.md  howto-allow-unauthenticated-username.en.md  howto-example-1.en.md  howto-example-2.en.md  howto-hide-files-in-dir-with-the-specified-client.en.md  howto-pyinstaller.en.md  (+2 more)
en/: index.html
env-value/: index.html
example/: work_together_with_other_asgi_app.py
examples/: specify_type_for_specific_file_extentions.json  webdav.json  webdav.toml  work_as_fastapi_middleware.py  work_together_with_fastapi.py  work_together_with_other_asgi_app.py
howto-allow-anonymous-user/: index.html
howto-allow-unauthenticated-username/: index.html
howto-hide-files-in-dir-with-the-specified-client/: index.html
howto-pyinstaller/: index.html
howto-specify-type-for-specific-file-extentions/: index.html
install/: index.html
known-issues/: index.html
misc/: index.html
multi-account/: index.html
protect-your-password-in-the-config/: index.html
pypi_package_project/: __init__.py  __main__.py  core.py
quick-start-in-docker/: index.html
requirements/: all.txt  base.txt  basic.txt  dev.txt  docker.txt  full.txt  ldap.txt  mkdocs.txt  pypi.txt  standalone.txt  test.txt  uvicorn.txt
requirements.d/: basic.txt  dev.txt  docker.txt  full.txt  ldap.txt  mkdocs.txt  mypy.txt  pypi.txt  standalone.txt  test.txt  webhdfs.txt
ru/: index.html
search/: search_index.json
test/: test_auth.py  test_dir_browser_ignore.py  test_helpers.py  test_provider_memory.py  test_request.py  test_response.py  test_webdav_method.py
tests/: asgi_test_kit.py  conftest.py  test_auth.py  test_cache.py  test_config.py  test_constants.py  test_constants_davupperenumabc.py  test_constants_lock.py  test_dav_lock.py  test_dav_path.py  test_helpers.py  test_lock.py  test_middleware_cors.py  test_provider_common.py  test_provider_file_system.py  test_provider_memory.py  test_provider_webhdfs.py  test_request.py  test_request_lock.py  test_request_parser_body_proppatch.py  test_request_range.py  test_response.py  test_response_hide_file_in_dir.py  test_response_sender.py  test_web_dav.py  test_webdav.py  test_webdav_base.py  test_webdav_method.py  testkit_asgi.py  testkit_asgi_v2.py  testkit_common.py
trouble-shooting/: index.html
webhdfs/: index.html
zh/: index.html
(+121 files in other folders)
